[gd_scene load_steps=13 format=3 uid="uid://c7kegxouquovo"]

[ext_resource type="Script" path="res://Scenes/System/title_screen.gd" id="1_co3ng"]
[ext_resource type="Texture2D" uid="uid://b07yxwlenv2hm" path="res://Assets/Sprites/Gameplay/Title.png" id="2_mq5og"]
[ext_resource type="FontFile" uid="uid://dcon8ikef8s3h" path="res://Assets/Fonts/m5x7.ttf" id="2_t578q"]
[ext_resource type="AudioStream" uid="uid://xfkr0dwrwsmx" path="res://Assets/Sounds/SFX/play_button.wav" id="3_ti6lx"]
[ext_resource type="Script" path="res://Scenes/System/Level_Button.gd" id="5_6xw37"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84gqp"]
bg_color = Color(0.0823529, 0.113725, 0.156863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0627451, 0.0784314, 0.121569, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osamc"]
bg_color = Color(0.12549, 0.180392, 0.215686, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0627451, 0.0784314, 0.121569, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwu3q"]
bg_color = Color(0.12549, 0.180392, 0.215686, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0627451, 0.0784314, 0.121569, 1)
anti_aliasing = false

[sub_resource type="Animation" id="Animation_2m1ex"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j4cfy"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_7ko1n"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lnup"]
_data = {
"RESET": SubResource("Animation_2m1ex"),
"fade": SubResource("Animation_j4cfy"),
"fade_in": SubResource("Animation_7ko1n")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_co3ng")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 56.0
offset_right = 560.0
offset_bottom = 153.0
mouse_filter = 2
texture = ExtResource("2_mq5og")

[node name="Button" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 296.0
offset_top = 248.0
offset_right = 343.0
offset_bottom = 272.0
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = "Start"

[node name="Button2" type="Button" parent="."]
texture_filter = 1
offset_left = 296.0
offset_top = 284.0
offset_right = 343.0
offset_bottom = 308.0
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = "Levels"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_8lnup")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ti6lx")

[node name="Levels" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 185.0
offset_top = 248.0
offset_right = 225.0
offset_bottom = 288.0

[node name="Back" type="Button" parent="Levels"]
texture_filter = 1
offset_left = 112.0
offset_top = 65.0
offset_right = 158.0
offset_bottom = 89.0
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = "Back"

[node name="GridContainer" type="GridContainer" parent="Levels"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 40.0
columns = 8

[node name="0_0" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-0 "
script = ExtResource("5_6xw37")

[node name="0_1" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-1 "
script = ExtResource("5_6xw37")
level = 1

[node name="0_2" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-2 "
script = ExtResource("5_6xw37")
level = 2

[node name="0_3" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-3 "
script = ExtResource("5_6xw37")
level = 3

[node name="0_4" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-4 "
script = ExtResource("5_6xw37")
level = 4

[node name="0_5" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-5 "
script = ExtResource("5_6xw37")
level = 5

[node name="0_6" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-6 "
script = ExtResource("5_6xw37")
level = 6

[node name="0_7" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 0-7 "
script = ExtResource("5_6xw37")
level = 7

[node name="1_0" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-0 "
script = ExtResource("5_6xw37")
situation = 1

[node name="1_1" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-1 "
script = ExtResource("5_6xw37")
situation = 1
level = 1

[node name="1_2" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-2 "
script = ExtResource("5_6xw37")
situation = 1
level = 2

[node name="1_3" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-3 "
script = ExtResource("5_6xw37")
situation = 1
level = 3

[node name="1_4" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-4 "
script = ExtResource("5_6xw37")
situation = 1
level = 4

[node name="1_5" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-5 "
script = ExtResource("5_6xw37")
situation = 1
level = 5

[node name="1_6" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-6 "
script = ExtResource("5_6xw37")
situation = 1
level = 6

[node name="1_7" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-7 "
script = ExtResource("5_6xw37")
situation = 1
level = 7

[node name="1_8" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-0 "
script = ExtResource("5_6xw37")
situation = 1

[node name="1_9" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-1 "
script = ExtResource("5_6xw37")
situation = 1
level = 1

[node name="1_10" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-2 "
script = ExtResource("5_6xw37")
situation = 1
level = 2

[node name="1_11" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-3 "
script = ExtResource("5_6xw37")
situation = 1
level = 3

[node name="1_12" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-4 "
script = ExtResource("5_6xw37")
situation = 1
level = 4

[node name="1_13" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-5 "
script = ExtResource("5_6xw37")
situation = 1
level = 5

[node name="1_14" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-6 "
script = ExtResource("5_6xw37")
situation = 1
level = 6

[node name="1_15" type="Button" parent="Levels/GridContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.780392, 0.811765, 0.8, 1)
theme_override_fonts/font = ExtResource("2_t578q")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_84gqp")
theme_override_styles/hover = SubResource("StyleBoxFlat_osamc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lwu3q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84gqp")
text = " 1-7 "
script = ExtResource("5_6xw37")
situation = 1
level = 7

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Levels/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_0" to="Levels/GridContainer/0_0" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_1" to="Levels/GridContainer/0_1" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_2" to="Levels/GridContainer/0_2" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_3" to="Levels/GridContainer/0_3" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_4" to="Levels/GridContainer/0_4" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_5" to="Levels/GridContainer/0_5" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_6" to="Levels/GridContainer/0_6" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/0_7" to="Levels/GridContainer/0_7" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_0" to="Levels/GridContainer/1_0" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_1" to="Levels/GridContainer/1_1" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_2" to="Levels/GridContainer/1_2" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_3" to="Levels/GridContainer/1_3" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_4" to="Levels/GridContainer/1_4" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_5" to="Levels/GridContainer/1_5" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_6" to="Levels/GridContainer/1_6" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_7" to="Levels/GridContainer/1_7" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_8" to="Levels/GridContainer/1_8" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_9" to="Levels/GridContainer/1_9" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_10" to="Levels/GridContainer/1_10" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_11" to="Levels/GridContainer/1_11" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_12" to="Levels/GridContainer/1_12" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_13" to="Levels/GridContainer/1_13" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_14" to="Levels/GridContainer/1_14" method="_on_pressed"]
[connection signal="pressed" from="Levels/GridContainer/1_15" to="Levels/GridContainer/1_15" method="_on_pressed"]
